Source/WebCore/inspector/InspectorRuntimeAgent.h
@@ -57,7 +57,10 @@ class InspectorRuntimeAgent : public InspectorBaseAgent<InspectorRuntimeAgent>, 
 public:
     virtual ~InspectorRuntimeAgent();
 
+    bool enabled() { return m_enabled; }
     // Part of the protocol.
+    virtual void enable(ErrorString*) { m_enabled = true; }
+    virtual void disable(ErrorString*) { m_enabled = false; }
     virtual void evaluate(ErrorString*,
                   const String& expression,
                   const String* objectGroup,
@@ -95,6 +98,7 @@ protected:
     virtual void unmuteConsole() = 0;
 
     InjectedScriptManager* injectedScriptManager() { return m_injectedScriptManager; }
+    bool m_enabled;
 
 private:
     InjectedScriptManager* m_injectedScriptManager;
