Source/WebCore/inspector/PageRuntimeAgent.cpp
@@ -50,7 +50,7 @@ using WebCore::TypeBuilder::Runtime::ExecutionContextDescription;
 namespace WebCore {
 
 namespace PageRuntimeAgentState {
-static const char reportExecutionContextCreation[] = "reportExecutionContextCreation";
+static const char runtimeEnabled[] = "runtimeEnabled";
 };
 
 PageRuntimeAgent::PageRuntimeAgent(InstrumentingAgents* instrumentingAgents, InspectorState* state, InjectedScriptManager* injectedScriptManager, Page* page, InspectorPageAgent* pageAgent, InspectorAgent* inspectorAgent)
@@ -76,47 +76,44 @@ void PageRuntimeAgent::clearFrontend()
 {
     m_instrumentingAgents->setPageRuntimeAgent(0);
     m_frontend = 0;
-    m_state->setBoolean(PageRuntimeAgentState::reportExecutionContextCreation, false);
+    String errorString;
+    disable(&errorString);
 }
 
 void PageRuntimeAgent::restore()
 {
-    if (!m_state->getBoolean(PageRuntimeAgentState::reportExecutionContextCreation))
-        return;
-    // Only report existing contexts if the page did commit load, otherwise we may
-    // unintentionally initialize contexts in the frames which may trigger some listeners
-    // that are expected to be triggered only after the load is committed, see http://crbug.com/131623
-    if (m_inspectorAgent->didCommitLoadFired()) {
+    if (m_state->getBoolean(PageRuntimeAgentState::runtimeEnabled)) {
         String error;
-        setReportExecutionContextCreation(&error, true);
+        enable(&error);
     }
 }
 
-void PageRuntimeAgent::setReportExecutionContextCreation(ErrorString*, bool enable)
+void PageRuntimeAgent::enable(ErrorString* errorString)
 {
-    m_state->setBoolean(PageRuntimeAgentState::reportExecutionContextCreation, enable);
-    if (!enable)
+    if (m_enabled)
         return;
-    Vector<std::pair<ScriptState*, SecurityOrigin*> > isolatedContexts;
-    for (Frame* frame = m_inspectedPage->mainFrame(); frame; frame = frame->tree()->traverseNext()) {
-        if (!frame->script()->canExecuteScripts(NotAboutToExecuteScript))
-            continue;
-        String frameId = m_pageAgent->frameId(frame);
 
-        ScriptState* scriptState = mainWorldScriptState(frame);
-        notifyContextCreated(frameId, scriptState, 0, true);
-        frame->script()->collectIsolatedContexts(isolatedContexts);
-        if (isolatedContexts.isEmpty())
-            continue;
-        for (size_t i = 0; i< isolatedContexts.size(); i++)
-            notifyContextCreated(frameId, isolatedContexts[i].first, isolatedContexts[i].second, false);
-        isolatedContexts.clear();
-    }
+    InspectorRuntimeAgent::enable(errorString);
+    m_state->setBoolean(PageRuntimeAgentState::runtimeEnabled, true);
+    // Only report existing contexts if the page did commit load, otherwise we may
+    // unintentionally initialize contexts in the frames which may trigger some listeners
+    // that are expected to be triggered only after the load is committed, see http://crbug.com/131623
+    if (m_inspectorAgent->didCommitLoadFired())
+        reportExecutionContextCreation();
+}
+
+void PageRuntimeAgent::disable(ErrorString* errorString)
+{
+    if (!m_enabled)
+        return;
+
+    InspectorRuntimeAgent::disable(errorString);
+    m_state->setBoolean(PageRuntimeAgentState::runtimeEnabled, false);
 }
 
 void PageRuntimeAgent::didClearWindowObject(Frame* frame)
 {
-    if (!m_state->getBoolean(PageRuntimeAgentState::reportExecutionContextCreation))
+    if (!m_enabled)
         return;
     ASSERT(m_frontend);
     String frameId = m_pageAgent->frameId(frame);
@@ -126,7 +123,7 @@ void PageRuntimeAgent::didClearWindowObject(Frame* frame)
 
 void PageRuntimeAgent::didCreateIsolatedContext(Frame* frame, ScriptState* scriptState, SecurityOrigin* origin)
 {
-    if (!m_state->getBoolean(PageRuntimeAgentState::reportExecutionContextCreation))
+    if (!m_enabled)
         return;
     ASSERT(m_frontend);
     String frameId = m_pageAgent->frameId(frame);
@@ -153,6 +150,25 @@ void PageRuntimeAgent::muteConsole()
 void PageRuntimeAgent::unmuteConsole()
 {
     Console::unmute();
+}
+
+void PageRuntimeAgent::reportExecutionContextCreation()
+{
+    Vector<std::pair<ScriptState*, SecurityOrigin*> > isolatedContexts;
+    for (Frame* frame = m_inspectedPage->mainFrame(); frame; frame = frame->tree()->traverseNext()) {
+        if (!frame->script()->canExecuteScripts(NotAboutToExecuteScript))
+            continue;
+        String frameId = m_pageAgent->frameId(frame);
+
+        ScriptState* scriptState = mainWorldScriptState(frame);
+        notifyContextCreated(frameId, scriptState, 0, true);
+        frame->script()->collectIsolatedContexts(isolatedContexts);
+        if (isolatedContexts.isEmpty())
+            continue;
+        for (size_t i = 0; i< isolatedContexts.size(); i++)
+            notifyContextCreated(frameId, isolatedContexts[i].first, isolatedContexts[i].second, false);
+        isolatedContexts.clear();
+    }
 }
 
 void PageRuntimeAgent::notifyContextCreated(const String& frameId, ScriptState* scriptState, SecurityOrigin* securityOrigin, bool isPageContext)
